--- a/home.html
+++ b/home.html
@@ -27,13 +27,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Gp - v4.7.0
-  * Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -75,7 +68,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+      <a href="login.html" class="get-started-btn scrollto">Login</a>
 
     </div>
   </header><!-- End Header -->
@@ -211,7 +204,7 @@
       </div>
     </section><!-- End Features Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services Section ======= 
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
@@ -272,7 +265,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> End Services Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
@@ -440,7 +433,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Counts Section ======= -->
+    <!-- ======= Counts Section ======= 
     <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
@@ -485,7 +478,7 @@
                   </div>
                 </div>
               </div>
-            </div><!-- End .content-->
+            </div> End .content-->
           </div>
         </div>
 
@@ -736,7 +729,9 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
+          <div class="col-lg-3 col-md-6 footer-newsletter">
+            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+          </div>
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h3>Gp<span>.</span></h3>
@@ -757,17 +752,6 @@
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -784,7 +768,6 @@
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
-
           </div>
 
         </div>
@@ -793,14 +776,10 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Gp</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>VFC</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://santhanabalan.ml/">Santhanabalan</a>
       </div>
     </div>
   </footer><!-- End Footer -->
